# QuickGasM

./: .gitignore  BeaverRadioBtn.qml  CMakeLists.txt  LsDialog.qml  MainButton.qml  README.md  RingBuffer.cpp  RingBuffer.h  SettingsManager.cpp  SettingsManager.h  TestObject.cpp  TestObject.h  advance_sys_setting_dlg.qml  camera.h  color_setting.h  color_setting_dlg.qml  common.h  custom_video_surface.cpp  custom_video_surface.h  device_status.h  frame_provider.cpp  frame_provider.h  gas_enhance_dlg.qml  img_grid_dlg.qml  img_preview_dlg.qml  iso_dlg.qml  ls_dlg.qml  ls_mode_dlg.qml  main.cpp  main.qml  media_file_manage.h  media_file_preview.h  param_dlg.qml  producer.cpp  producer.h  qml.qrc  quick_item.qml  ring_buffer.cpp  ring_buffer.h  settings_dlg.qml  (+7 more)
content/: AndroidDelegate.qml  AppleStyleSwitch.qml  about_dlg.qml  alarm_log_dlg.qml  alarm_manage_dlg.qml  bat_manage_dlg.qml  gas_leak_setting_dlg.qml  login.qml  low_high_tempreture_setting_dlg.qml  measurement_unit_dlg.qml  network_setting_dlg.qml  recorder_setting_dlg.qml  reset_dlg.qml  snapshot_setting_dlg.qml  store_manage_dlg.qml  sys_log_dlg.qml  sys_setting_dlg.qml  sys_upgrade_dlg.qml  time_setting_dlg.qml  vision_mix_setting_dlg.qml
src/: device_control.h
